# LinguaFlow-

./: .gitignore  DEVELOPMENT_LOG.md  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  clipboard.rs  config.rs  history.rs  hotkey.rs  lib.rs  main.rs  screenshot.rs  server.rs  tray.rs  window.rs
src/app/: App.tsx
src/components/dynamic-island/: DynamicIsland.tsx  DynamicIslandPanel.tsx  DynamicIslandResult.tsx  DynamicIslandWindow.tsx
src/components/hotkeys/: HotkeyRecorderWindow.tsx
src/components/screenshot/: ScreenshotOverlayWindow.tsx
src/components/settings/: SettingsWindow.tsx
src/components/settings/pages/: GeneralSettings.tsx  HistoryPage.tsx  HotkeySettingsPage.tsx  ServiceSettingsPage.tsx  TranslationSettingsPage.tsx
src/components/translate/: TranslateWindow.tsx
src/components/ui/: Button.tsx  Form.tsx  Material.tsx  SegmentedControl.tsx  Select.tsx  WindowControls.tsx  WindowFrame.tsx
src/constants/: defaultConfig.ts  languages.ts  prompts.ts
src/hooks/: useTranslatorEngine.ts
src/stores/: configStore.ts  uiLanguageStore.ts
src/types/: config.ts
src/utils/: ai.ts  aiModel.ts  deepMerge.ts  globalHotkeys.ts  history.ts  hotkeys.ts  languageDirection.ts  tauri.ts  translateServices.ts
