[package]
name = "linguaflow"
version = "0.1.0"
description = "Tray-resident AI translation, OCR, screenshot translation, and AI reply assistant."
authors = ["LinguaFlow"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "linguaflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tiny_http = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
arboard = "3"
